@@ -28,9 +28,8 @@ let version =
 type construction_mode =
   | ModeCanonical     (* --canonical: canonical Knuth LR(1) automaton *)
   | ModeInclusionOnly (* --no-pager : states are merged when there is an inclusion
-			              relationship, default reductions are used *)
-  | ModePager         (* normal mode: states are merged as per Pager's criterion,
-			              default reductions are used *)
+			              relationship *)
+  | ModePager         (* normal mode: states are merged as per Pager's criterion *)
   | ModeLALR          (* --lalr     : states are merged as in an LALR generator,
                                       i.e. as soon as they have the same LR(0) core *)
 
