@@ -1,3 +1,9 @@
+2015/09/25:
+Modified the meaning of --canonical to allow default reductions to take
+place. There implies no loss of precision in terms of lookahead sets,
+and should allow gaining more contextual information when a syntax
+error is encountered. (It should also lead to a smaller automaton.)
+
 2015/09/23:
 New option --list-errors, which produces a list of input sentences which
 are representative of all possible syntax errors. (Costly.)
